--- a/index.html
+++ b/index.html
@@ -4,84 +4,71 @@
     <title>Guessing Game</title>
 
     <!-- Bootstrap and CSS here-->
-    <style>
-      .center {
-        text-align: center;
-      }
-      ul {
-          list-style: none;
-          padding: 0;
-      }
-      img {
-          display: inline;
-          width: 200px;
-          height: 100px;
-      }
-      #footer {
-          width: 100%;
-          border-top: solid 2px black;
-          background-color: white;
-          position: fixed;
-          bottom: 0;
-      }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   </head>
-  <body>
 
-      <div id='app'>
+  <body class='container'>
+
+      <div id='app' class='center'>
 
         <div id='headers'>
           <!-- Title and subtitles! -->
           <h1>Guessing Game</h1>
-          <h2>Guess a number between 1 and 100</h2>
+          <h2>Guess a number between 1 and 100!</h2>
         </div>
 
         <div id='main'>
           <div id='input-parent'>
             <!-- Player's guess input, and submit button -->
-            <input placeholder="#" maxlength='3' autofocus=autofocus></input>
-            <button>Go!</button>
+            <div class="form-group">
+              <input id='player-input' placeholder="#" maxlength='3' autofocus=autofocus></input>
+            </div>
+            <button type="button" class="btn btn-primary" id='submit'>Go!</button>
+
           </div>
 
           <div id='guesses'>
             <!-- unordered list of guesses -->
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+            <ul id='guess-list'>
+              <li class='guess'>-</li>
+              <li class='guess'>-</li>
+              <li class='guess'>-</li>
+              <li class='guess'>-</li>
+              <li class='guess'>-</li>
             </ul>
           </div>
 
           <div id="menu-btns">
             <!-- reset and hint buttons -->
-            <button>Reset</button>
-            <button>Hint</button>
+            <button type="button" class="btn btn-warning" id='reset'>Reset</button>
+            <button type="button" class="btn btn-info" id='hint'>Hint</button>
           </div>
         </div>
       </div>
 
 
 
-    <div id='footer'>
-        <div>
-          <div class=''>
+    <div id='footer' class='center'>
+        <div class='row'>
+
+          <div class='col-sm-4'>
             <img src='images/fa-logo@2x_preview.png'></img>
           </div>
 
-          <div class=''>
+          <div class='col-sm-4'>
             <h4>Project by Matt Mintzer</h4>
           </div>
 
-          <div class=''>
+          <div class='col-sm-4'>
             <img src='images/grace_hopper_academy_preview.png'></img>
           </div>
 
-
         </div>
     </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/GuessingGame.js"></script>
 
   </body>
 </html>
