--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   </head>
 
-  <body class='container'>
+  <body class='container-fluid padding text-center'>
 
-      <div id='app' class='center'>
+      <div id='app' class='container-fluid padding'>
 
         <div id='headers'>
           <!-- Title and subtitles! -->
@@ -49,8 +49,8 @@
 
 
 
-    <div id='footer' class='center'>
-        <div class='row'>
+    <div id='footer' class='container-fluid padding text-center'>
+        <div class='row text-center'>
 
           <div class='col-sm-4'>
             <img src='images/fa-logo@2x_preview.png'></img>
@@ -67,7 +67,8 @@
         </div>
     </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/GuessingGame.js"></script>
 
   </body>
