--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Guessing Game</title>
+    <link rel='icon' href='images/icon.png' type='image/x-icon'>
 
     <!-- Bootstrap and CSS here-->
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -67,12 +68,8 @@
         </div>
     </div>
 
-
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-      <script type="text/javascript" src="js/GuessingGame.js"></script>
-
+<!--jquery and js  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/guessingGame.js"></script>
   </body>
 </html>
